# login-service

./: .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
app/data/user/: user_data_provider.py
app/data/user/database/: db_user.py
app/domain/: user.py
app/infra/database/: postgres_connector.py  postgres_connector_test.py
app/infra/encrypters/: encrypter.py  jwt_adapter.py  jwt_adapter_test.py
app/infra/hashers/: bcrypt_adapter.py  bcrypt_adapter_test.py  hasher.py
app/repository/: user_repository.py  user_repository_test.py
app/services/: login_service.py  login_service_test.py
app/strategies/: auth_strategy_interface.py  user_password_strategy.py  user_password_strategy_test.py  user_password_strtagy_test.py
controller/: login.py
routes/: home.py  login.py
