[project]
name = "oauth-login"
version = "0.1.0"
description = ""
authors = [
    {name = "lucascostamr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["bcrypt (>=4.3.0,<5.0.0)", "pyjwt (>=2.10.1,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-testmon = "^2.1.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"